alb.tf
resource "aws_lb" "default" {
 name= "helloworld-lb"
 subnets=aws_subnet.public.*.id
 security_groups= [aws_security_group.load_balancer.id]

}
resource "aws_lb_target_group" "hello_world" {
  name= "helloworld-target-group"
  port= 80
  protocol= "HTTP"
  vpc_id= aws_vpc.default.id
  target_type= "ip"
}

resource "aws_lb_listener" "hello_world" {
  load_balancer_arn = aws_lb.default.id
  port= "80"
  protocol= "HTTP"
  default_action {
    target_group_arn = aws_lb_target_group.hello_world.id
    type= "forward"
  }
}
